# watchman

./: .env.example  .gitignore  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-collection-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-scoring-and-slack-review/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-enrichment-pipeline/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-gate-2-and-output/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-wire-normalizer-and-health-digest/: 05-01-PLAN.md  05-01-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-tech-debt-and-doc-sync/: 06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-audit-gap-closure-runtime-fixes/: .continue-here.md  07-01-PLAN.md  07-01-SUMMARY.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/quick/1-switch-to-openrouter/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/10-watchman-notion-migration-replace-slack-/: 10-PLAN.md  10-SUMMARY.md
.planning/quick/11-fix-notion-poller-for-select-properties/: 11-PLAN.md  11-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: link_notion_cards.py  migrate_to_notion.py
src/watchman/: __init__.py  llm_client.py  main.py
tests/: test_collector_registry.py  test_enrichment.py  test_gate2.py  test_normalizer_job.py  test_notion_poller.py  test_output_writer.py  test_scoring.py  test_slack_blocks.py  test_view_more_signals.py
(+64 files in other folders)
